tags/2013-08-29_cppreference/Archive/1223c0abd84f5fc809270a9719268354-450b268db24c2d00c039538a4ebc8fa6/output
+ gcc-4.8 -std=c11 -xc -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'main':
main.cpp:2:5: error: 'char32_t' undeclared (first use in this function)
     char32_t const *x = U"foo";
     ^
main.cpp:2:5: note: each undeclared identifier is reported only once for each function it appears in
main.cpp:2:14: error: expected ';' before 'const'
     char32_t const *x = U"foo";
              ^
